# Ros2_Camera_Interface

./: camera_params.yaml  package.xml  setup.cfg  setup.py
camera_switcher/: camera_publisher.py  camera_subscriber.py
launch/: camera_switcher.launch.py
